# python-venvs

./: README.md  gitpyvenvs.py  install.py  venv-activate.sh
venvs/data-science/: pyproject.toml  requirements.txt
venvs/development/: pyproject.toml  requirements.txt
