[tool.poetry]
name = "data-science"
version = "0.1.0"
description = "Environment for data science"
authors = ["Matthew Feickert <matthew.feickert@cern.ch>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
scipy = "^1.2"
pandas = "^0.23.4"
matplotlib = "^3.0"
scikit-learn = "^0.20.2"
h5py = "^2.9"
jupyter = "^1.0"
autopep8 = "^1.4"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
